# torch-android-studio-template

./: .gitignore  LICENSE  README.md
app/: .gitignore  CMakeLists.txt  build.gradle
app/src/androidTest/java/com/paramsen/torchtemple/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/: main.lua  mockAsciiNet.net
app/src/main/java/com/paramsen/torchtemple/: MainActivity.java
app/src/main/java/com/paramsen/torchtemple/torch/: JNIBridge.java
app/src/main/native/: Constants.h  JNIBridge.cpp  JNIBridgeX86.cpp  Log.h  Torch.cpp  Torch.h
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/paramsen/torchtemple/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
